--- a/templates/category_items.html
+++ b/templates/category_items.html
@@ -4,14 +4,32 @@
 
         <!-- Page Content -->
     <div class="container">
+   <div class = 'flash'>
+          {% with messages = get_flashed_messages() %}
+      {% if messages %}
+          
+        <ul>
+        {% for message in messages %}
+            <li> <strong> {{ message }} </strong> </li>
+        {% endfor %}
+        </ul>
+        {% endif %}
+    {% endwith %}
+
+</div>
+
+      {{message}}
 
       <!-- Page Heading -->
         <br>
         <h3>Category:  {{category.category}}</h3>
       <br>
-      <a href="{{url_for('create_car_for_category', category_id=category.id)}}"><h5>Click Here to Enter and Sell Your Vehicle</h5></a>
+      <a href="{{url_for('create_car_for_category', category_id=category.id)}}"><button type="button" class="btn btn-primary">Click Here to Enter and Sell Your Vehicle</button></a>
       <br>
-      <a href="{{url_for('category')}}"><h5>Return to Homepage</h5></a>
+      <br>
+      <a href="{{url_for('category')}}"><button type="button" class="btn btn-info">Return to Homepage</button></a>
+      <br>
+      <br>
 
       
       {%for car in cars%}
@@ -30,7 +48,7 @@
           <br>
           <p>Seller's Notes:  {{car.description}}</p>
           <br>
-          <a {% if car.garage_id %} href="{{url_for('car_from_garage', garage_id=car.garage_id, car_id=car.id)}}" {%else%} href="{{url_for('car_from_category', category_id=category.id, car_id=car.id)}}" {%endif%}><h5>Get Details<h5></a>
+          <a {% if car.garage_id %} href="{{url_for('car_from_garage', garage_id=car.garage_id, car_id=car.id)}}" {%else%} href="{{url_for('car_from_category', category_id=category.id, car_id=car.id)}}" {%endif%}><button type="button" class="btn btn-primary">Get Details</button></a>
           
         </div>
       </div>
