--- a/templates/create_garage.html
+++ b/templates/create_garage.html
@@ -1,7 +1,7 @@
 {% extends "main.html" %}
 {% block content %}
 
-
+<div class="container">
   <div class="row divider green">
     <div class="col-md-12"></div>
   </div>
@@ -19,19 +19,20 @@
 
           <label for="description">Garage Description:</label>
           <textarea class="form-control" maxlength="250" rows="3" name="description" placeholder="Description of Your Garage"></textarea>
-          
-          <button type="submit" class="btn btn-default" id="submit" type="submit">
-          <span class="glyphicon glyphicon-glass" aria-hidden="true"></span>Create</button>
           <br>
-          
+          <br>
+          <button type="submit" class="btn btn-success" id="submit" type="submit">Create</button>
+          <br>
         </div>
       </form>
       <a href = "{{url_for('category')}}">
-            <button class="btn btn-default delete">
-            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
+            <button class="btn btn-danger">Cancel</button>
           </a>
+          <br>
+          <br>
     </div>
   </div>
+</div>
 {% endblock %}
 
 
