--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{%extends "main.html"%}
+\{%extends "main.html"%}
 {%block content%}
 
     
@@ -61,7 +61,7 @@
         <p>You can create your own space, or "garage" where you can post all your vehicles to sell. Your vehicles will also show up in the general catergories for greater visibility. But this will be your own store where your loyal customers can come back to over and over again.</p>
         <br>
         <br>
-        <a href="{{url_for('create_garage')}}">Click Here to Create Your Garage</a>
+        <a href="{{url_for('create_garage')}}"><button type="button" class="btn btn-warning">Click Here to Create Your Garage</button></a>
         <br>
         <br>
 
@@ -72,7 +72,7 @@
         <p>You can create your own space, or "garage" where you can post all your vehicles to sell. Your vehicles will also show up in the general catergories for greater visibility. But this will be your own store where your loyal customers can come back to over and over again.</p>
         <br>
         <br>
-        <a href="{{url_for('create_garage')}}">Click Here to Create Your Garage</a>
+        <a href="{{url_for('create_garage')}}"><button type="button" class="btn btn-warning">Click Here to Create Your Garage</button></a>
         <br>
         <br>
       </div>
