--- a/templates/category_purchase.html
+++ b/templates/category_purchase.html
@@ -9,8 +9,10 @@
         <h3 class="my-4">Category:  {{category.category}}</h3>
         <br>
           <a href="{{url_for('car_from_category', category_id=category.id, car_id=car.id)}}">
-                <h5>Go Back</h5>
+                <button type="button" class="btn btn-info">Go Back</button>
                 </a>
+                <br>
+                <br>
       <div class="row">
         <div class="col-md-7">
           <a href="#">
@@ -25,11 +27,12 @@
           <br>
           <h6>From Seller: {{user.name}}</h6>
           <br>
-          </div>
+        </div>
       </div>
+      <br>
       <div class="row">
         <div class="col-md-12">
-          <p>To purchase from this seller, fill out the form below.  Place your bid and leave a short message for the Seller.  Once you click "Submit" you will be contacted soon.  </p>
+          <p>To purchase from this seller, fill out the form below.  Place your bid and leave a short message for the Seller.  Click "Submit" and you will be contacted by the Seller soon.  </p>
           <form action="{{url_for('purchase_from_category', category_id=category.id, car_id=car.id)}}" method = "POST">
             <div class="form-group">
             <label for="name">Your Name:</label>
@@ -41,18 +44,23 @@
             <label for="bid">Your Bid: </label>
             <input type ="text" maxlength="150" name="bid" placeholder="">
             <br>
-            <label for="message">Message to Seller:</label>
+          </div>
+          <div>
+            <label for="message"><h6>Message to Seller:</h6></label>
+          </div>
+          <div>
             <textarea maxlength="250" rows="3" name="mymessage" placeholder="type message here"></textarea>
+          </div>
             <br>
-            <button type="submit" class="btn btn-default" id="submit" type="submit">
+            <button type="submit" class="btn btn-success" id="submit" type="submit">
             <span class="glyphicon glyphicon-glass" aria-hidden="true"></span>Submit</button>
+            <br>
+            <br>
 
         </div>
         
       </div>
       <!-- /.row -->
-
-      <hr>
  
     </div>
     <!-- /.container -->
