--- a/templates/create_car_for_category.html
+++ b/templates/create_car_for_category.html
@@ -2,98 +2,41 @@
 {% block content %}
 
 <div class="container">
-  <div class="row divider green">
-    <div class="col-md-12"></div>
-  </div>
   <div class="row banner menu">
     <div class="col-md-11 col-md-offset-1 padding-none">
-      <h1>Enter a New Car</h1>
+      <br>
+      <h4>Enter a New Car in Category: {{category.category}}</h4>
     </div>
   </div>
+  <br>
   <div class="row">
     <div class="col-md-6 col-md-offset-1 padding-top">
-      <form action="{{url_for('create_car_for_category', category_id=category.id)}}" method = "post">
+      <form action="{{url_for('create_car_for_category', category_id=category.id)}}" method = "POST">
         <div class="form-group">
+
           <label for="year">Year: </label>
           <input type ="text" maxlength="50" class="form-control" name="year" placeholder="Year">
-
+          <br>
           <label for="year">Make: </label>
           <input type ="text" maxlength="50" class="form-control" name="make" placeholder="Make">
-
+          <br>
           <label for="year">Model: </label>
           <input type ="text" maxlength="50" class="form-control" name="model" placeholder="Model">
-
+          <br>
           <label for="year">Color: </label>
           <input type ="text" maxlength="50" class="form-control" name="color" placeholder="Color">
-
-          <label for="description">Description:</label>
-          <textarea class="form-control" maxlength="250" rows="3" name="description" placeholder="Description of the Vehicle"></textarea>
-
+          <br>
+          <label>Milage: </label>
+          <input type="text" maxlength="50" class="form-control" name="milage">
+          <br>
+          <label for="description">Seller's Notes:</label>
+          <textarea class="form-control" maxlength="250" rows="3" name="description"></textarea>
+          <br>
           <label for="price">Price:</label>
-          <div class="input-group">
-            <div class="input-group-addon">$</div>
-            <input type ="text" class="form-control" maxlength="10" name="price" placeholder="Price in $">
-          </div>
-          
-          <label for="course">Bodystyle: </label>
-          <div class="radio">
-            <label>
-              <input type="radio" name="category" id="style1" value="1">Sedans
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="category" id="style2" value="2">Coupes
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="category" id="style3" value="3">SUVs
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="category" id="style4" value="4">Crossovers
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="category" id="style5" value="5">Wagons/Hatchbacks
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="category" id="style6" value="6">Green Cars/Hybrids
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="category" id="style7" value="7">Convertibles
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="category" id="style8" value="8">Luxury Cars
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="category" id="style9" value="9">Sports Cars
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="category" id="style10" value="10">Pickup Trucks
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="category" id="style11" value="11">Vans/Minivans
-            </label>
-          </div>
-          
-          <button type="submit" class="btn btn-default" id="submit" type="submit">
-          <span class="glyphicon glyphicon-glass" aria-hidden="true"></span>Create</button>
+          <input type ="text" class="form-control" maxlength="10" name="price">
+          <br>
+          <button type="submit" class="btn btn-success" id="submit" type="submit">Create</button>
+          <br>
           <br>
           
         </div>
@@ -101,9 +44,10 @@
 
       
       <a href="{{url_for('category_items', category_id=category.id)}}">
-              <button class="btn btn-default delete">
-              <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Cancel</button>
+              <button class="btn btn-danger">Cancel</button>
               </a>
+              <br>
+              <br>
     </div>
   </div>
 </div>
