--- a/templates/delete_car_from_category.html
+++ b/templates/delete_car_from_category.html
@@ -3,34 +3,40 @@
 
 
 
-<div class="row">
-        <div class="col-md-7">
-          <a href="#">
-            <img class="#" src="{{car.car_item_pic}}" alt="">
-          </a>
-        </div>
+<div class="container">
+  <br>
 
-        <div class="col-md-5">
+  <div class="row">
+          <div class="col-md-7">
+            <a href="#">
+              <img class="#" {%if car.car_item_pic%} src="{{car.car_item_pic}}" {%else%} src="http://via.placeholder.com/600x400" {%endif%} alt="">
+            </a>
+          </div>
 
-        	<h2>Are you sure you want to delete <span>{{car.year}}</span><span>{{car.make}}</span><span>{{car.model}}??</span></h2>
+          <div class="col-md-5">
+           <br>
+           <br>
+            <h2>Are you sure you want to delete {{car.year}} {{car.make}} {{car.model}} </h2>
 
-          	<form action="{{url_for('delete_car_from_category', category_id=category.id, car_id=car.id)}}" method = "post">
+              <form action="{{url_for('delete_car_from_category', category_id=category.id, car_id=car.id)}}" method = "POST">
 
-        			<button type="submit" class="btn btn-default delete" id="submit">
-        			<span class="glyphicon glyphicon trash" aria-hidden="true"></span>Delete</button>
-        	 
-        	 		<a href="{{url_for('car_in_category', category_id=category.id, car_id=car.id)}}">
-        	 		<button class="btn btn-default delete">
-        	 		<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Cancel</button>
-        	 		</a>
-	
+                <button type="submit" class="btn btn-dark" id="submit">
+                Delete</button> 
+                <br>
+                <br>
 
-		        </form>
+              </form>
+              <a href="{{url_for('category_items', category_id=category.id)}}">
+                <button class="btn btn-danger">Cancel</button>
+                </a>
+                <br>
+                <br>
 
 
-
-        </div>
-      </div>
+          </div>
+  </div>
+<br>
+</div>
 
 
 
