--- a/templates/delete_garage_confirm.html
+++ b/templates/delete_garage_confirm.html
@@ -14,16 +14,18 @@
 
         	<h2>Deleteing this Garage will also delete all vehicles associated with it.  Are you sure you want to delete <span>{{garage.name}} </h2>
 
-          	<form action="{{url_for('delete_garage', garage_id=garage.id)}}" method = "post">
-
-        			<button type="submit" class="btn btn-default delete" id="submit">
-        			<span class="glyphicon glyphicon trash" aria-hidden="true"></span>Delete</button>	
+          	<form action="{{url_for('delete_garage', garage_id=garage.id)}}" method = "POST">
+              <br>
+        			<button type="submit" class="btn btn-dark" id="submit">Delete</button>	
+              <br>
+              <br>
 
 		        </form>
             <a href="{{url_for('garage_items', garage_id=garage.id)}}">
-              <button class="btn btn-default delete">
-              <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Cancel</button>
+              <button class="btn btn-danger">Cancel</button>
               </a>
+              <br>
+              <br>
 
 
         </div>
