--- a/templates/edit_category.html
+++ b/templates/edit_category.html
@@ -1,31 +1,27 @@
 {% extends "main.html" %}
 {% block content %}
-{% include "header.html" %}
-	<div class="row divider green">
-		<div class="col-md-12"></div>
-	</div>
-	<div class="row banner menu">
-		<div class="col-md-11 col-md-offset-1 padding-none">
-			<h1>Edit {{restaurant.name}}</h1>
-		</div>
-	</div>
+
+
+<div class="container">
 	<div class="row">
-		<div class="col-md-6 col-md-offset-1 padding-top">
-			<form action="{{ url_for('editRestaurant',restaurant_id = restaurant.id)}}" method = "post">
-				<div class="form-group">
-					<label for="name">Name:</label>
-					<input type ="text" class="form-control" name="editRestaurantName" value="{{restaurant.name }}">
-					<div class="padding-bottom"></div>
-					<button type="submit" class="btn btn-default" id="submit" type="submit">
-					<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Save</button>
-					<a href = "{{url_for('allRestaurants')}}">
-						<button class="btn btn-default delete">
-						<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
-					</a>
-				</div>
+		<div class="col-md-12">
+			<form action="#" method="POST">
+				<h4>Edit {{garage.name}}</h4>
+				<br>
+				<label>Garage Name: </label>
+				<input type="text" maxlength="100" name="name">
+				<br>
+
+				<label>Garage Description: </label>
+				<input type="text" maxlength="100" name="description">
+				<br>
+
 			</form>
 		</div>
 	</div>
+</div>
+
+
 {% endblock %}
 
 
