--- a/templates/garage_purchase.html
+++ b/templates/garage_purchase.html
@@ -8,12 +8,14 @@
       <!-- Page Heading -->
       <h3 class="my-4">Garage:  {{garage.name}}</h3>
       <br>
-      <a href="{{url_for('garage_items', garage_id=garage.id)}}"><h5>Return to Garage</h5></a>
+      <a href="{{url_for('garage_items', garage_id=garage.id)}}"><button type="button" class="btn btn-info">Return to Garage</button></a>
+      <br>
+      <br>
       <a href="{{url_for('category')}}">
-              <h5>Go to Homepage</h5>
+              <button type="button" class="btn btn-secondary">Go to Homepage</button>
               </a>
               <br>
-    
+              <br>
 
       <div class="row">
         <div class="col-md-7">
@@ -30,11 +32,16 @@
           <h6>From Seller: {{user.name}}</h6>
           <br>
         </div>
+        <br>
       </div>
+
       <div class="row">
         <div class="col-md-12">
+          <br>
           <p>To purchase from this seller, fill out the form below.  Place your bid and leave a short message for the Seller.  Once you click "Submit" you will be contacted soon.  </p>
+
           <form action="{{url_for('purchase_from_garage', garage_id=garage.id, car_id=car.id)}}" method = "POST">
+
             <div class="form-group">
             <label for="name">Your Name:</label>
             <input type ="text" maxlength="150" name="name" placeholder="Name">
@@ -43,18 +50,21 @@
             <input type ="text" maxlength="150" name="email" placeholder="sample@email.com">
             <br>
             <label for="bid">Your Bid: </label>
-            <input type ="text" maxlength="150" name="bid" placeholder="">
+            <input type ="text" maxlength="150" name="askingprice" placeholder="">
             <br>
-            <label for="message">Message to Seller:</label>
+            <label for="message"><h6>Message to Seller:</h6></label>
+          </div>
+          <div>
             <textarea maxlength="250" rows="3" name="description" placeholder="type message here"></textarea>
+          </div>
             <br>
-            <button type="submit" class="btn btn-default" id="submit" type="submit">
-            <span class="glyphicon glyphicon-glass" aria-hidden="true"></span>Submit</button>
+            <button type="submit" class="btn btn-success" id="submit">Submit</button>
+            <br>
+            <br>
         </div>
       </div>
       <!-- /.row -->
 
-      <hr>
     </div>
     <!-- /.container -->
 
