--- a/templates/owner_messages.html
+++ b/templates/owner_messages.html
@@ -1,29 +1,49 @@
-{% extends "main.html" %}
-{% block content %}
-
-{%for message in messages%}
-
-<div>
-  <p>Messages for car id: {{message.car_id}}</p>
-  <br>
-  <p>Buyer's Name: {{message.buyer_name}}</p>
-  <br>
-  <p>Buyer's Email: {{message.buyer_email}}</p>
-  <br>
-  <p>Buyer's Phone number: {{message.buyer_phone}}</p>
-  <br>
-  <p>Buyer's Message:  {{message.buyer_message}}</p>
-
-</div>
+{%extends "main.html"%}
+{%block content%}
 
 
+
+
+    <div class="container">
+
+      <!-- Page Heading -->
+      <br>
+      <p>Owner:  {{user.name}}</p>
 
       <a href = "{{url_for('category')}}">
-            <button class="btn btn-default delete">
-            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Return</button>
+            <button type="button" class="btn btn-info">Return to Homepage</button>
           </a>
-    </div>
+          <br>
+          <br>
+          <hr>
+
+      {%if not bids%}
+
+      <p>No bids for this vehicle yet.</p>
+
+      {%else%}
+
+        {%for bid in bids%}
+            
+            <div class="row">
+              <div class="col-md-12" id="message-box">
+                  <h4>Bids for {{car.year}} {{car.make}} {{car.model}}</h4>
+                  <br>
+                  <p>Buyer's Name: {{bid.buyer_name}}</p>
+                  <br>
+                  <p>Buyer's Email: {{bid.buyer_email}}</p>
+                  <br>
+                  <p>Buyer's Bid: {{bid.buyer_phone}}</p>
+                  <br>
+                  <p>Buyer's Message:  {{bid.buyer_message}}</p>
+                </div>
+            </div>
+            <hr>
+        {%endfor%}
+      {%endif%}
+
   </div>
+
 {% endblock %}
 
 
