Adjust facebook login function

--- a/templates/login.html
+++ b/templates/login.html
@@ -99,6 +99,7 @@
     xfbml      : true,  // parse social plugins on this page
     version    : 'v2.11' // use version 2.2
   });
+  FB.AppEvents.logPageView();
   };
   // Load the SDK asynchronously
   (function(d, s, id) {
